# foci

./: CMakeLists.txt  README.md  main.c  matches.txt
